syntax = "proto3";
package ProtoMessage;

//心跳
message C2S1{

}

//在线/离线通知
message S2C100{
	int64 UserId = 1;
	bool IsOnline = 2;
}

//连接网关
message C2S100000{

}

//加入频道
message C2S100001{
	int32 RoomId = 1;
}

message UserPoint{
	int64 UserId = 1;
	double X = 2;
	double Y = 3;
}
message S2C100001{
	int32 RoomId = 1;
	repeated UserPoint UserPoints = 2;
}

//通知加入频道
message S2C100002{
	int64 UserId = 1;
	int32 RoomId = 2;
}

//移动
message C2S100003{
	double X = 2;
	double Y = 3;
}

//通知移动
message S2C100004{
	int64 UserId = 1;
	double X = 2;
	double Y = 3;
}

//离开频道
message C2S100005{
	int32 RoomId = 1;
}

//通知离开频道
message S2C100006{
	int64 UserId = 1;
	int32 RoomId = 2;
}